--- a/templates/HFC/problem_statements_with_issue_area.html
+++ b/templates/HFC/problem_statements_with_issue_area.html
@@ -1,4 +1,89 @@
+
 {% extends 'HFC/layout.html' %}
+{% load static from staticfiles %}
+
+  <head>
+{% block title %} Problem Statements {% endblock %}
+</head>  
+
+
+{% block main %}
+<!--Banner start -->
+<div class="banner-wrap">
+        <div class="content-width sm-content-width">
+            <div class="banner__main">
+                <h1>Problem Statements</h1>
+                <p class="large">Lorem ipsum dolor sit amet, consectetur adipiscing sed do eiusmod tempor incididunt ut labore</p>
+                <a class="btn btn--info" href="#">Suggest a Problem Statement</a>
+            </div>
+        </div>
+    </div>
+    <!--Banner end -->
+    <!--main start -->
+    
+    <div id="main-wrap" class="main__large-pd">
+        <div class="content-width">
+            <div class="main">
+                <section id="contents">
+                        {% for prob_list in problems_list  %}
+                    <article class="post-blog">
+                        <h4><a href="{% url 'problem_discription' prob_list.title_slug %}">{{prob_list.title}}:</a></h4>
+                        <div class="badge-sec"><strong>Submitted By : </strong><span class="badge badge--yellow">{{prob_list.partner_id}}</span>
+                        <strong>Issue Area : </strong><span class="badge badge--pink"></span>{{prob_list.issue_area}}</div>
+                        <p>{{prob_list.summary}}</p>
+                        <div class="badge-sec badge-sec__alt"><strong>Status : </strong><span class="badge">{{prob_list.status}}</span></div>
+                        <a class="btn btn--border" href="{% url 'problem_discription' prob_list.title_slug %}">View Details</a>
+                    </article>
+                        {% endfor %}
+            </section><!--contents -->
+              <aside id="sidebar">
+                    <div class="sidebar__list">
+                            <p>Explore Problem Statement across various issue areas</p>
+                                <ul>
+                                    {% for prob_list in all_problems %}
+                                    <li><a href="{% url 'problem_statements_with_issuearea' prob_list.issue_area_slug %}">{{prob_list.issue_area}}</a></li>
+                                    {% endfor %}
+                                </ul>
+                                    
+                    </div>
+                    <div class="newsletter">
+                            <div class="newsletter__fig"><img src="{% static 'images/news-update.png' %}" alt="Image"></div>
+                            <form action="#" class="newsletter__form">
+                                <p class="large bold">Get Latest Updates!</p>
+                                <input type="email" placeholder="Enter your email">
+                                <input class="btn btn--info" type="submit" value="Subscribe">
+                            </form>
+                    </div> 
+                </aside><!--sidebar -->
+            </div>
+        </div>
+    </div>
+                       
+                            
+    
+            
+                
+{% endblock %}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
    
 
@@ -32,8 +117,8 @@
     <div class="col-sm-4">
         <p>Explore the problem statements across various issue areas</p>
         <ul>
-            {% for prob_list in all_problems %}
-                <li><a href="{% url 'problem_statements_with_issuearea' prob_list.issue_area_slug %}">{{prob_list.issue_area}}</a></li>
+            {% for problem in all_problems %}
+                <li><a href="{% url 'problem_statements_with_issuearea' problem.issue_area_slug %}">{{problem.issue_area}}</a></li>
             {% endfor %}
         </ul>
     </div>
